--- a/tpAngular/src/app/sucursales/sucursales.component.html
+++ b/tpAngular/src/app/sucursales/sucursales.component.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="cantidadEmpleados" class="form-label">Cantidad de Empleados</label>
-                  <input type="number" class="form-control" id="cantidadEmpleados" [(ngModel)]="nuevaSucursal.cantidadEmpleados" name="cantidadEmpleados">
+                  <input type="number" class="form-control" id="cantidadEmpleados" [(ngModel)]="nuevaSucursal.cantidadEmpleados" name="cantidadEmpleados" min="0">
                 </div>
               </form>
             </div>
